--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -1,30 +1,105 @@
-body, header, h1, img, div, form, input, table {
+/*--------------------------------------------------
+**footer固定在底部*/
+html, body {
+    height: 100%;
     margin: 0;
     padding: 0;
 }
 
-html, body {
-    height: 100%;
-}
-
-.wrap {
+#wrap {
     min-height: 100%;
     height: auto !important;
     height: 100%;
     margin: 0 auto -70px;
+    padding-right: 40px; /*for right side*/
 }
-
-.clear {
-    clear: both;
-}
-
 #end {
+    clear: both;
     height: 70px;
 }
-
 #copyright {
-    background-color: #ccc;
-    text-align: center;
     height: 70px;
-    padding-top: 20px;
+    overflow: hidden;
+    background-color: #ccc;
+}
+
+#copyright p {
+    margin: 10px;
+}
+
+/*--------------------------------------------------
+**Logo和搜索*/
+#logo {
+    padding: 0 8px;
+    display: inline-block;
+}
+
+#search {
+    width: 50%;
+    height: 50px;
+    padding: 8px;
+    float: right;
+}
+
+/*--------------------------------------------------
+**导航和轮播*/
+@media (max-width: 767px) {
+    /*小于767像素，手机界面，水果导航、轮播分别单独占一行*/
+    #navigation {
+        display: block;
+    }
+
+    #navigation ul li {
+        display: inline-block;
+    }
+}
+
+@media (min-width: 768px) {
+    /*大于768像素，水果导航占左侧，轮播占右侧*/
+    #navigation {
+        display: inline-block;
+    }
+
+    #slide {
+        width: 80%;
+        float: right;
+        height: 160px;
+    }
+}
+
+@media (max-width: 991px) {
+    /*768-991像素之间，Slide高度为123像素，为了与左边对齐，设置padding。*/
+    #slide {
+        padding: 18px 8px;
+    }
+}
+
+#navigation-slide {
+    margin-bottom: 10px;
+}
+
+/*--------------------------------------------------
+**详细类目*/
+.block {
+    display: block;
+}
+
+/*--------------------------------------------------
+**右侧固定栏*/
+#right-side {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    width: 40px;
+    height: inherit;
+    background-color: gray; /*TODO待修改*/
+}
+
+#right-side-wrap {
+    position: absolute;
+    bottom: 0;
+}
+
+#right-side-wrap img {
+    margin: 5px 0;
 }
